--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tabs": "^5.1.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
